Fix mobile follow menu and force compact navigation into visible hamburger menu

--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -42,13 +42,8 @@
     }
   }
 
-  li {
-    display: inline;
-  }
-
-  .current {
-    font-weight: bold;
-  }
+  li { display: inline; }
+  .current { font-weight: bold; }
 }
 
 /*
@@ -61,12 +56,7 @@
   margin-top: 1em;
   padding-top: 1em;
 
-  ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    font-family: $sans-serif;
-  }
+  ul { margin: 0; padding: 0; list-style-type: none; font-family: $sans-serif; }
 
   li {
     display: block;
@@ -86,40 +76,15 @@
       border: 1px solid var(--global-border-color);
       border-radius: 0;
 
-      &:hover {
-        color: var(--global-link-color-hover);
-      }
-
-      &.current {
-        color: #fff;
-        background: var(--global-base-color);
-      }
-
-      &.disabled {
-        color: var(--global-text-color-light);
-        pointer-events: none;
-        cursor: not-allowed;
-      }
+      &:hover { color: var(--global-link-color-hover); }
+      &.current { color: #fff; background: var(--global-base-color); }
+      &.disabled { color: var(--global-text-color-light); pointer-events: none; cursor: not-allowed; }
     }
 
-    &:first-child {
-      margin-left: 0;
-
-      a {
-        border-top-left-radius: $border-radius;
-        border-bottom-left-radius: $border-radius;
-      }
-    }
-
-    &:last-child {
-      a {
-        border-top-right-radius: $border-radius;
-        border-bottom-right-radius: $border-radius;
-      }
-    }
+    &:first-child { margin-left: 0; a { border-top-left-radius: $border-radius; border-bottom-left-radius: $border-radius; } }
+    &:last-child a { border-top-right-radius: $border-radius; border-bottom-right-radius: $border-radius; }
   }
 
-  /* next/previous buttons */
   &--pager {
     display: block;
     padding: 1em 2em;
@@ -134,26 +99,10 @@
     border: 1px solid var(--global-border-color);
     border-radius: $border-radius;
 
-    &:hover {
-      color: var(--global-link-color-hover);
-    }
-
-    &:first-child {
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-    }
-
-    &:last-child {
-      margin-left: -1px;
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-    }
-
-    &.disabled {
-      color: var(--global-text-color-light);
-      pointer-events: none;
-      cursor: not-allowed;
-    }
+    &:hover { color: var(--global-link-color-hover); }
+    &:first-child { border-top-right-radius: 0; border-bottom-right-radius: 0; }
+    &:last-child { margin-left: -1px; border-top-left-radius: 0; border-bottom-left-radius: 0; }
+    &.disabled { color: var(--global-text-color-light); pointer-events: none; cursor: not-allowed; }
   }
 }
 
@@ -182,9 +131,7 @@
     color: var(--global-masthead-link-color);
     text-decoration: none;
 
-    &:hover {
-      color: var(--global-masthead-link-color-hover);
-    }
+    &:hover { color: var(--global-masthead-link-color-hover); }
   }
 
   button {
@@ -210,26 +157,17 @@
       &:first-child {
         font-weight: bold;
         text-wrap: wrap;
-
-        a {
-          margin-left: 0;
-        }
+        a { margin-left: 0; }
       }
 
-      &:last-child {
-        a {
-          margin-right: 0;
-        }
-      }
+      &:last-child a { margin-right: 0; }
     }
 
-    #theme-toggle {
-      a {
-        width: 25px;
-        display: flex;
-        justify-content: center;
-        cursor: pointer;
-      }
+    #theme-toggle a {
+      width: 25px;
+      display: flex;
+      justify-content: center;
+      cursor: pointer;
     }
 
     a {
@@ -247,13 +185,13 @@
         transition: $global-transition;
         -webkit-transform: scaleX(0);
             -ms-transform: scaleX(0);
-                transform: scaleX(0); /* hide*/
+                transform: scaleX(0);
       }
 
       &:hover:before {
         -webkit-transform: scaleX(1);
             -ms-transform: scaleX(1);
-                transform: scaleX(1); /* reveal*/
+                transform: scaleX(1);
       }
     }
   }
@@ -273,53 +211,54 @@
       margin: 0;
       padding: 10px 20px;
       font-size: $type-size-5;
-
-      &:hover {
-        color: var(--global-masthead-link-color-hover);
-        background: var(--global-border-color);
-      }
+      &:hover { color: var(--global-masthead-link-color-hover); background: var(--global-border-color); }
     }
 
-    &:before {
+    &:before, &:after {
       content: "";
       position: absolute;
-      top: -11px;
-      right: 10px;
       width: 0;
       border-style: solid;
       border-width: 0 10px 10px;
-      border-color: var(--global-border-color) transparent;
       display: block;
+    }
+
+    &:before {
+      top: -11px;
+      right: 10px;
+      border-color: var(--global-border-color) transparent;
       z-index: 0;
     }
 
     &:after {
-      content: "";
-      position: absolute;
       top: -10px;
       right: 10px;
-      width: 0;
-      border-style: solid;
-      border-width: 0 10px 10px;
       border-color: var(--global-bg-color) transparent;
-      display: block;
       z-index: 1;
     }
 
     li {
       display: block;
       border-bottom: 1px solid var(--global-border-color);
-
-      &:last-child {
-        border-bottom: none;
-      }
+      &:last-child { border-bottom: none; }
     }
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 760px) {
   .greedy-nav {
     min-width: 0;
+    padding-right: 2.75rem;
+  }
+
+  .greedy-nav > button {
+    right: 0.25rem;
+    min-width: 2.5rem;
+    z-index: 110;
+  }
+
+  .greedy-nav .visible-links {
+    max-width: calc(100% - 2.75rem);
   }
 
   .greedy-nav .visible-links a {
@@ -327,8 +266,9 @@
   }
 
   .greedy-nav .hidden-links {
-    right: -0.25rem;
+    right: 0;
     width: min(18rem, calc(100vw - 1.5rem));
+    z-index: 105;
   }
 
   .greedy-nav .hidden-links a {
@@ -342,21 +282,8 @@
 
 .nav__list {
   font-size: 1.25rem;
-
-  ul {
-    margin-bottom: 1em;
-  }
-
-  a {
-    display: block;
-    padding: 0.125em 0;
-    color: inherit;
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
+  ul { margin-bottom: 1em; }
+  a { display: block; padding: 0.125em 0; color: inherit; &:hover { text-decoration: underline; } }
   .active {
     margin-left: -0.5em;
     padding-left: 0.5em;
@@ -365,10 +292,7 @@
     font-weight: bold;
     background: var(--global-base-color);
     border-radius: $border-radius;
-
-    &:hover {
-      color: #fff;
-    }
+    &:hover { color: #fff; }
   }
 }
 
@@ -430,30 +354,14 @@
     line-height: 1.5;
     border-bottom: 1px solid var(--global-border-color);
     text-decoration-line: none !important;
-
-    &:hover {
-      color: #000;
-      background: var(--global-link-color-hover);
-    }
+    &:hover { color: #000; background: var(--global-link-color-hover); }
   }
 
-  > li:last-child {
-    a {
-      border-bottom: none;
-    }
-  }
+  > li:last-child a { border-bottom: none; }
+  li ul > li a { padding-left: 2rem; font-weight: normal; }
 
-  li ul > li a {
-    padding-left: 2rem;
-    font-weight: normal;
-  }
-
-  /* hide sub sub links on small screens*/
   li > ul li {
     display: none;
-
-    @include breakpoint($medium) {
-      display: block;
-    }
+    @include breakpoint($medium) { display: block; }
   }
 }
