--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -1,6 +1,6 @@
-/* ==========================================================================
+/* ===========================================================================
    SIDEBAR
-   ========================================================================== */
+   =========================================================================== */
 
 /*
    Default
@@ -19,7 +19,7 @@
 
   @media screen and (min-width: $sidebar-screen-min-width) {
     height: 100vh;
-    overflow-y: auto;               // Add scrollbar if the sidebar is too long
+    overflow-y: auto;
     position: fixed;
     padding-top: $masthead-height;
   }
@@ -84,8 +84,6 @@
   display: table-cell;
   vertical-align: top;
   width: 36px;
-  // set width only, for non-square avatars
-  // height: 36px;
 
   @include breakpoint($large) {
     display: block;
@@ -163,13 +161,10 @@
   vertical-align: middle;
   font-family: $sans-serif;
   z-index: 10;
-  position: relative;
   cursor: pointer;
 
-  li:last-child {
-    a {
-      margin-bottom: 0;
-    }
+  li:last-child a {
+    margin-bottom: 0;
   }
 
   @include breakpoint($large) {
@@ -195,9 +190,13 @@
   border: 1px solid var(--global-border-color);
   border-radius: $border-radius;
   background: var(--global-bg-color);
-  z-index: -1;
+  z-index: 30;
   box-shadow: 0 0 10px rgba(#000, 0.25);
   cursor: default;
+
+  .author__urls-wrapper.is-open & {
+    display: block;
+  }
 
   @include breakpoint($large) {
     display: block;
@@ -235,7 +234,7 @@
     width: 0;
     border-style: solid;
     border-width: 0 10px 10px;
-    border-color: #fff transparent;
+    border-color: var(--global-bg-color) transparent;
     z-index: 1;
 
     @include breakpoint($large) {
